# Employee-Tracker

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
api/: .env  .env.development  .env.production  Dockerfile  README.md  celerybeat-schedule  gunicorn.conf.py  manage.py  pyproject.toml  setup.sh
api/apps/attendance/: admin.py  models.py  serializers.py  urls.py  views.py
api/apps/attendance/management/commands/: schedule_task.py
api/apps/attendance/migrations/: 0001_initial.py  0002_initial.py  0003_alter_attendancerecord_options.py
api/apps/employees/: admin.py  models.py  serializers.py  urls.py  views.py
api/apps/employees/migrations/: 0001_initial.py  0002_alter_employee_options_and_more.py
api/apps/leave_management/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
api/apps/leave_management/migrations/: 0001_initial.py  0002_remove_leaverequest_requested_on_and_more.py  0003_alter_leaverequest_created_at.py
api/apps/notifications/: admin.py  consumers.py  models.py  serializers.py  tasks.py  urls.py  views.py
api/apps/notifications/migrations/: 0001_initial.py
api/apps/reports/: admin.py  models.py  serializers.py  urls.py  views.py
api/apps/reports/migrations/: 0001_initial.py
api/apps/shared/: admin.py  constant.py  logger.py  models.py  utils.py
api/apps/shared/migrations/: 0001_initial.py
api/config/: asgi.py  celery.py  urls.py
api/config/settings/: base.py  development.py  production.py
ui/: .env.development  .env.production  .eslintrc.json  Dockerfile  README.md  package-lock.json  package.json  (+1 more)
(+28 files in other folders)
